Applied and reformatted all modules using formatter present in voltsofdoomparent, applied through eclipse